test/parser/error/err_33_expected_eof.pl0
program p; 
begin 
end junk